Compile error in nsNetscapeProfileMigratorBase::ReadBranch
Categories
(SeaMonkey :: General, defect)
Tracking
(seamonkey2.63 unaffected)
| Tracking | Status | |
|---|---|---|
| seamonkey2.63 | --- | unaffected |
People
(Reporter: frg, Assigned: frg)
References
(Regression)
Details
Attachments
(1 file)
|
2.28 KB,
patch
|
frg
:
review+
iannbugzilla
:
approval-comm-esr60+
|
Details | Diff | Splinter Review |
There is a loop pref and a local pref. Old code so probably some change broke it but it is really bad code anyway and should be fixed in all supported trees.
0:25.53 d:/seamonkey/comm-central/comm/suite/components/profile/nsNetscapeProfileMigratorBase.cpp(532,23): error: redefinition of '
pref' with a different type: 'nsNetscapeProfileMigratorBase::PrefBranchStruct ' vs 'nsTString<char> &'
0:25.53 PrefBranchStruct pref = new PrefBranchStruct;
0:25.53 ^
0:25.53 d:/seamonkey/comm-central/comm/suite/components/profile/nsNetscapeProfileMigratorBase.cpp(526,14): note: previous definitio
n is here
0:25.53 for (auto& pref : prefs) {
0:25.53 ^
0:25.70 1 error generated.
0:25.72 mozmake.EXE[4]: *** [d:/seamonkey/comm-central/config/rules.mk:812: nsNetscapeProfileMigratorBase.obj] Error 1
0:25.72 mozmake.EXE[3]: *** [d:/seamonkey/comm-central/config/recurse.mk:74: comm/suite/components/profile/target] Error 2
0:25.72 mozmake.EXE[3]: *** Waiting for unfinished jobs....
| Assignee | ||
Comment 1•6 years ago
|
||
Patch from Bill with changes discussed on irc. IanN can you look it over and do a seprate a+ just in case.
Pushed by frgrahl@gmx.net:
https://hg.mozilla.org/comm-central/rev/b26f81583564
Don't redefine pref variable. r=frg
| Assignee | ||
Updated•6 years ago
|
| Assignee | ||
Updated•6 years ago
|
| Assignee | ||
Comment 4•6 years ago
|
||
Just saw that it was a recent fix that broke it so no need to backport.
Description
•