Bug 1559407 - Don't redefine pref variable. r=frg